# rusTree

./: .gitignore  404.html  Cargo.toml  README.md  architecture.html  cli_usage.html  configuration_files.html  contributing.html  faq.html  getting_started.html  index.html  introduction.html  library_usage.html  print.html  searchindex.js  toc.html  toc.js
.github/workflows/: deploy-docs.yml
api-docs/: all.html  fn.create_async_context.html  fn.create_context_from_options.html  fn.create_default_processing_context.html  fn.create_lazy_patterns.html  fn.create_thread_safe_lazy_patterns.html  fn.diff_processing_contexts.html  fn.format_diff.html  fn.format_nodes.html  fn.format_nodes_with_context.html  fn.get_tree_nodes.html  fn.get_tree_nodes_from_source.html  fn.get_tree_nodes_owned.html  fn.get_tree_nodes_with_context.html  fn.optimize_context.html  fn.process_tree_with_builder.html  fn.sort_nodes_with_context.html  fn.validate_contexts.html  fn.validate_processing_context.html  fn.walk_path.html  fn.walk_path_owned.html  fn.walk_path_with_context.html  index.html  sidebar-items.js
api-docs/config/: index.html  (+1 more)
architecture/: modules.html  overview.html
benches/: core_performance.rs
cli_usage/: apply_functions.html  configuration.html  diff_and_comparison.html  examples.html  filtering_and_patterns.html  getting_started.html  listing_and_traversal.html  llm_integration.html  metadata_and_analysis.html  options.html  output_formats.html  sorting_and_ordering.html
docs/: book.toml
getting_started/: basic_usage.html  installation.html
library_usage/: apply_functions.html  concepts.html  examples.html
src/: lib.rs  main.rs
tests/: apply_function_edge_cases.rs  apply_function_pattern_matching_tests.rs  apply_function_tests.rs  backward_compatibility_tests.rs  common.rs  config_loader_tests.rs  context_api_integration_tests.rs  context_performance_tests.rs  context_tests.rs  diff_cli_integration_tests.rs  diff_core_unit_tests.rs  diff_formatter_tests.rs  diff_infinite_loop_debug.rs  diff_llm_integration_tests.rs  directory_ordering_tests.rs  dirs_only_feature_tests.rs  external_function_display_tests.rs  external_function_tests.rs  filter_from_file_tests.rs  full_flow_tests.rs  full_path_cli_tests.rs  full_path_tests.rs  ignore_features_tests.rs  llm_cli_integration_tests.rs  llm_env_tests.rs  llm_prompt_tests.rs  llm_provider_tests.rs  llm_response_tests.rs  metadata_aggregation_integration_tests.rs  metadata_aggregator_tests.rs  no_summary_report_tests.rs  pattern_matching_tests.rs  pruning_tests.rs  text_formatter_tests.rs  walker_integration_tests.rs
(+508 files in other folders)
