[package]
name = "rustree"
version = "0.1.0"
edition = "2024"

# The library is implicit (src/lib.rs)

[[bin]]
name = "rustree"
path = "src/main.rs"

[dependencies]
# Library-specific dependencies (also available to the binary)
walkdir = "2.5"
thiserror = "2.0.12"
glob = "0.3" # For -P pattern matching
ignore = "0.4" # For gitignore processing and directory walking
# regex = "1.7" # If used for ignore patterns or apply functions in the lib
# rayon = "1.8" # For potential parallelism in the library

# CLI-specific dependencies (only needed for the binary)
clap = { version = "4.5", features = ["derive"] }

# If the library directly offered LLM client functionality (which we decided against for V1,
# but if it did, it would go here, potentially as optional features for the lib)
# reqwest = { version = "0.11", features = ["json"], optional = true }
# tokio = { version = "1", features = ["full"], optional = true }

[features]
# Potentially, if some library features were heavy and optional
# default = []
# feature_x = []

[dev-dependencies]
tempfile = "3.20"
anyhow = "1.0"