[package]
name = "rustree"
version = "0.1.0"
edition = "2024"

# The library is implicit (src/lib.rs)

[[bin]]
name = "rustree"
path = "src/main.rs"

[[bench]]
name = "core_performance"
harness = false

[dependencies]
# Library-specific dependencies (also available to the binary)
walkdir = "2.5"
thiserror = "2.0.12"
glob = "0.3" # For -P pattern matching
ignore = "0.4" # For gitignore processing and directory walking
# regex = "1.7" # If used for ignore patterns or apply functions in the lib
# rayon = "1.8" # For potential parallelism in the library

# LLM integration and other runtime dependencies
rig-core = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.0"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }

# CLI-specific dependencies (only needed for the binary)
clap = { version = "4.5", features = ["derive", "color"] }
clap_complete = "4.5"

# (No build dependencies currently)

[features]
# Potentially, if some library features were heavy and optional
# default = []
# feature_x = []

[dev-dependencies]
tempfile = "3.20"
anyhow = "1.0"
criterion = "0.5"
# assert_cmd was previously used for locating binaries in tests, but the tests
# now rely on the `CARGO_BIN_EXE_<name>` environment variable provided by
# Cargo itself, so the dependency is no longer required.